# haskelm

./: .project-settings.yml  .travis.yml  BaseDecs.elm  JsonUtil.elm  LICENSE  README.md  haskelm.cabal
src/: Haskelm.hs  Main.hs
src/AST/: Declaration.hs  Module.hs  Pattern.hs  PrettyPrint.hs
src/AST/Expression/: General.hs  Source.hs
src/Language/Elm/: TH.hs
src/Language/Elm/TH/: BaseDecs.hs  HToE.hs  Json.hs  Util.hs
src/Parse/: Helpers.hs  Parse.hs
src/Test/: Test.hs  module1.hs
src/Test/Test/: Test.hs
